if(NOT GETOPT_NAMESPACE)
  set(GETOPT_NAMESPACE "GETOPT")
  set(GETOPT_STANDALONE 1)
endif()
# In all cases:
STRING(TOLOWER ${GETOPT_NAMESPACE} GETOPT_LIBRARY_NAME)

APPEND_COPYRIGHT(${CMAKE_CURRENT_SOURCE_DIR}/COPYING)

PROJECT(${GETOPT_NAMESPACE} C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.2)

#set(BUILD_SHARED_LIBS OFF)

set(GETOPT_SRCS
  getopt.c
  getopt_long.c
  )
if(WIN32)
  if(BUILD_SHARED_LIBS)
    ADD_DEFINITIONS(-DGETOPT_DLL)
  endif()
endif()

#INCLUDE_DIRECTORIES(BEFORE
#  ${CMAKE_CURRENT_SOURCE_DIR}
#  )

set(GETOPT_MAJOR_VERSION 1)
set(GETOPT_MINOR_VERSION 0)
set(GETOPT_BUILD_VERSION 0)
set(GETOPT_VERSION
  "${GETOPT_MAJOR_VERSION}.${GETOPT_MINOR_VERSION}.${GETOPT_BUILD_VERSION}")

set(GETOPT_LIBRARY_PROPERTIES ${GETOPT_LIBRARY_PROPERTIES}
  VERSION "${GETOPT_VERSION}"
  SOVERSION "${GETOPT_MAJOR_VERSION}.${GETOPT_MINOR_VERSION}"
)

# Only build this lib static. On most unix system
# we will be using the standart getopt
# so this lib will be for the poor Win32 user (those
# guys really need help)
ADD_LIBRARY(${GETOPT_LIBRARY_NAME} ${GETOPT_SRCS})
SET_TARGET_PROPERTIES(${GETOPT_LIBRARY_NAME} PROPERTIES ${GETOPT_LIBRARY_PROPERTIES})
if(CMAKE_COMPILER_IS_GNUCXX AND MINGW)
  # For some reason mingw fails to export the optind which is clearly marked as exported (using extern symbol)
  # ... for now use this flag :
  SET_TARGET_PROPERTIES(${GETOPT_LIBRARY_NAME} PROPERTIES LINK_FLAGS "-Wl,--export-all-symbols")
endif()

if(BUILD_EXAMPLES)
ADD_EXECUTABLE(ex_getopt ex_getopt.c)
TARGET_LINK_LIBRARIES(ex_getopt ${GETOPT_LIBRARY_NAME})
if(NOT GETOPT_INSTALL_NO_LIBRARIES)
  INSTALL(TARGETS ex_getopt
    RUNTIME DESTINATION ${GETOPT_INSTALL_BIN_DIR} COMPONENT Applications
    LIBRARY DESTINATION ${GETOPT_INSTALL_LIB_DIR} COMPONENT Libraries
    ARCHIVE DESTINATION ${GETOPT_INSTALL_LIB_DIR} COMPONENT Development
  ${CPACK_NAMELINK_TYPE}
  )
endif()
endif()

if(NOT GETOPT_INSTALL_NO_LIBRARIES)
  INSTALL(TARGETS ${GETOPT_LIBRARY_NAME}
    RUNTIME DESTINATION ${GETOPT_INSTALL_BIN_DIR} COMPONENT Applications
    LIBRARY DESTINATION ${GETOPT_INSTALL_LIB_DIR} COMPONENT Libraries
    ARCHIVE DESTINATION ${GETOPT_INSTALL_LIB_DIR} COMPONENT Development
  ${CPACK_NAMELINK_TYPE}
  )
endif()

