
set(EXPAT_SRCS
  xmlparse.c
  xmltok.c
  xmlrole.c
)

if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" AND ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" )
	SET_SOURCE_FILES_PROPERTIES(${EXPAT_SRCS}
		PROPERTIES COMPILE_FLAGS "-fPIC")
endif()

# for windows add the .def and .rc files to the source list if building shared libs
if(WIN32)
  if(BUILD_SHARED_LIBS)
    set(EXPAT_DLL 1)
    if(NOT UNIX)
      if(NOT BORLAND)
        if(NOT MINGW)
          set(EXPAT_SRCS ${EXPAT_SRCS} libexpat.def )
        endif()
      endif() 
    endif()   
  endif()
endif()

ADD_LIBRARY(${EXPAT_LIBRARY_NAME} ${EXPAT_SRCS})
SET_TARGET_PROPERTIES(${EXPAT_LIBRARY_NAME} PROPERTIES ${EXPAT_LIBRARY_PROPERTIES})
if(NOT EXPAT_INSTALL_NO_LIBRARIES)
	INSTALL(TARGETS ${EXPAT_LIBRARY_NAME} EXPORT gdcm-abi-config
    RUNTIME DESTINATION ${EXPAT_INSTALL_BIN_DIR} COMPONENT Applications
    LIBRARY DESTINATION ${EXPAT_INSTALL_LIB_DIR} COMPONENT Libraries
    ARCHIVE DESTINATION ${EXPAT_INSTALL_LIB_DIR} COMPONENT Development
  ${CPACK_NAMELINK_TYPE}
  )
endif()
