# JPEG 16 bits project

IF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" AND ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" )
	SET_SOURCE_FILES_PROPERTIES(${JPEG_SOURCES}
		PROPERTIES COMPILE_FLAGS "-fPIC")
ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" AND ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" )

INCLUDE_DIRECTORIES(BEFORE
  ${CMAKE_CURRENT_BINARY_DIR}
  ${ITKJPEG_SOURCE_DIR})
ADD_LIBRARY(${JPEG_LIBRARY_NAME}16 ${JPEG_SOURCES})
SET_TARGET_PROPERTIES(${JPEG_LIBRARY_NAME}16 PROPERTIES ${JPEG_LIBRARY_PROPERTIES})
IF(NOT JPEG_INSTALL_NO_LIBRARIES)
	INSTALL(TARGETS ${JPEG_LIBRARY_NAME}16 EXPORT gdcm-config
    RUNTIME DESTINATION ${JPEG_INSTALL_BIN_DIR} COMPONENT Applications
    LIBRARY DESTINATION ${JPEG_INSTALL_LIB_DIR} COMPONENT Libraries ${NAMELINK_SKIP}
    ARCHIVE DESTINATION ${JPEG_INSTALL_LIB_DIR} COMPONENT Development
  )
  #INSTALL(TARGETS ${JPEG_LIBRARY_NAME}16
  #  LIBRARY DESTINATION ${JPEG_INSTALL_LIB_DIR} COMPONENT Development ${NAMELINK_ONLY}
  #)
ENDIF(NOT JPEG_INSTALL_NO_LIBRARIES)

IF(NOT JPEG_INSTALL_NO_DEVELOPMENT)
  FILE(GLOB header_files "${CMAKE_CURRENT_BINARY_DIR}/*.h")
  INSTALL(FILES ${header_files}
    DESTINATION ${JPEG_INSTALL_INCLUDE_DIR}/16 COMPONENT Development
  )
ENDIF(NOT JPEG_INSTALL_NO_DEVELOPMENT)
