# JPEG 16 bits project
include_directories(BEFORE
  ${CMAKE_CURRENT_BINARY_DIR}
  ${ITKJPEG_SOURCE_DIR})
add_library(${JPEG_LIBRARY_NAME}16 ${JPEG_SOURCES})
set_target_properties(${JPEG_LIBRARY_NAME}16 PROPERTIES ${JPEG_LIBRARY_PROPERTIES})
if(NOT JPEG_INSTALL_NO_LIBRARIES)
	install(TARGETS ${JPEG_LIBRARY_NAME}16 EXPORT gdcm-abi-config
        RUNTIME DESTINATION ${JPEG_INSTALL_BIN_DIR} COMPONENT Applications
        LIBRARY DESTINATION ${JPEG_INSTALL_LIB_DIR} COMPONENT Libraries ${NAMELINK_SKIP}
        ARCHIVE DESTINATION ${JPEG_INSTALL_LIB_DIR} COMPONENT Development
    )
endif()

if(NOT JPEG_INSTALL_NO_DEVELOPMENT)
  FILE(GLOB header_files "${CMAKE_CURRENT_BINARY_DIR}/*.h")
  INSTALL(FILES ${header_files}
    DESTINATION ${JPEG_INSTALL_INCLUDE_DIR}/16 COMPONENT Development
  )
endif()
